2006-12-04  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_graphics PNG_FillPattern) demo/html/Makefile:
	Reconcile use of truecolor and transparency options. 
	Fill patterns apparently must not be defined as truecolor subimages.
	"set term png truecolor transparent" should produce a transparent
	background.  
	Bug #1608488

2006-12-02  Ethan Merritt  <merritt@u.washington.edu>

	* demo/all.dem: Refer to transparent_solids.dem by its proper name.
	* demo/rgb_variables.dem: Minor update to first 2 plots.

2006-11-30  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (plot3d_impulses): Color values read from a file were
	not being applied to impulse plots. Replicate the color assignment code
	being used by plot3d_points.

2006-11-29  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm src/term.c (enhanced_recursion): Re-think what is 
	needed to pass an escaped Unicode character to svg. In normal text
	mode treat the sequence &#x... as a special case and pass it through
	as is.  In enhanced text mode & is already a special character, so in
	this case we need to temporarily replace it with an octal value that
	cannot be mistaken for something else, #xFE.

2006-11-28  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/faq-ja.tex: Sync Japanese documentation,
	SF Patch [1519215].

2006-11-28  Ethan Merritt  <merritt@u.washington.edu>

	* demo/layout.dem: Add a 4th demo plot illustrating the creation of
	stacked plots.

	* src/graphics.c (do_key_sample): If a box plot sample has zero width,
	do not draw a sample at all. This avoids drawing a visible border around
	a zero-width box.

2006-11-28  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in: Fix bug in --{en|dis}able-wxwidgets

	* src/wxterminal/wxt_gui.cpp:
	* src/wxterminal/wxt_gui.h:
	Allow building with wxMac, in addition to wxMSW and wxGTK.

2006-11-26  James R. Van Zandt  <jrv@vanzandt.comcast.net>
