@@ -1,3 +1,10 @@
+2006-12-07  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/plot3d.c (get_3ddata): If the first data file is non-empty but
+	has no usable data, then auto-scaling fails. Instead of a fatal error,
+	just print a warning and try to read subsequent data files.
+	Bug #1610430
+
 2006-12-04  Ethan Merritt  <merritt@u.washington.edu>
 
 	* term/gd.trm (PNG_graphics PNG_FillPattern) demo/html/Makefile:
